add core structure for home page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <header>Header Content</header>
+    <section>
+        Main image
+    </section>
+    <section>
+        Club ethos
+    </section>
+    <section>
+        Running locations, distance and times
+    </section>
+
+    <footer>facebook, twitter, instagram - social links</footer>
 
 </body>
 
