add meetup times and main structure

--- a/index.html
+++ b/index.html
@@ -91,7 +91,41 @@
 
 
     <section>
-        Running locations, distance and times
+        <div>
+            <h2>Urban</h2>
+            <h2>Monday</h2>
+            <h2>5K</h2>
+            <h2>The Marker Hotel</h2>
+            <h2>18:30</h2>
+        </div>
+        <div>
+            <h2>Trail</h2>
+            <h2>Wednesday</h2>
+            <h2>10K</h2>
+            <h2>The Phoenix Park</h2>
+            <h2>18:30</h2>
+        </div>
+        <div>
+            <h2>Urban</h2>
+            <h2>Friday</h2>
+            <h2>5K</h2>
+            <h2>The Marker Hotel</h2>
+            <h2>18:30</h2>
+        </div>
+        <div>
+            <h2>Trail</h2>
+            <h2>Saturday</h2>
+            <h2>5K</h2>
+            <h2>The Phoenix Park</h2>
+            <h2>09:30</h2>
+        </div>
+        <div>
+            <h2>Coffee</h2>
+            <h2>Sunday</h2>
+            <h2>0K</h2>
+            <h2>The Marker Hotel</h2>
+            <h2>11:00</h2>
+        </div>
     </section>
 
     <footer>facebook, twitter, instagram - social links</footer>
