--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </section>
 
 
-    <section>
+    <section id="times">
         <div>
             <h2>Urban</h2>
             <h2>Monday</h2>
