--- a/index.html
+++ b/index.html
@@ -92,39 +92,39 @@
 
     <section id="times">
         <div>
-            <h2>Urban</h2>
-            <h2>Monday</h2>
-            <h2>5K</h2>
-            <h2>The Marker Hotel</h2>
-            <h2>18:30</h2>
+            <h2>Urban <i class="fa-solid fa-city"></i></h2>
+            <h3>Monday</h3>
+            <h3>5K</h3>
+            <h3>The Marker Hotel</h3>
+            <h3>18:30</h3>
         </div>
         <div>
-            <h2>Trail</h2>
-            <h2>Wednesday</h2>
-            <h2>10K</h2>
-            <h2>The Phoenix Park</h2>
-            <h2>18:30</h2>
+            <h2>Trail <i class="fa-solid fa-tree"></i></h2>
+            <h3>Wednesday</h3>
+            <h3>10K</h3>
+            <h3>The Phoenix Park</h3>
+            <h3>18:30</h3>
         </div>
         <div>
-            <h2>Urban</h2>
-            <h2>Friday</h2>
-            <h2>5K</h2>
-            <h2>The Marker Hotel</h2>
-            <h2>18:30</h2>
+            <h2>Urban <i class="fa-solid fa-city"></i></h2>
+            <h3>Friday</h3>
+            <h3>5K</h3>
+            <h3>The Marker Hotel</h3>
+            <h3>18:30</h3>
         </div>
         <div>
-            <h2>Trail</h2>
-            <h2>Saturday</h2>
-            <h2>5K</h2>
-            <h2>The Phoenix Park</h2>
-            <h2>09:30</h2>
+            <h2>Trail <i class="fa-solid fa-tree"></i></h2>
+            <h3>Saturday</h3>
+            <h3>10K</h3>
+            <h3>The Phoenix Park</h3>
+            <h3>09:30</h3>
         </div>
         <div>
-            <h2>Coffee</h2>
-            <h2>Sunday</h2>
-            <h2>0K</h2>
-            <h2>The Marker Hotel</h2>
-            <h2>11:00</h2>
+            <h2>Coffee <i class="fa-solid fa-mug-hot"></i></i></h2>
+            <h3>Sunday</h3>
+            <h3>0K</h3>
+            <h3>The Marker Hotel</h3>
+            <h3>11:30</h3>
         </div>
     </section>
 
